crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__component_with_slot_content.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<Foo><div>slot content</div></Foo>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Foo"), _attrs, {
    default: _withCtx((_, _push, _parent, _scopeId) => {
      if (_push) {
        _push(`<div>slot content</div>`)
      }
    }),
  _: 1
  }, _parent))
}
